compiler/testData/diagnostics/tests/multiplatform/topLevelFun/conflictingHeaderDeclarations.fir.kt
// MODULE: m1-common
// FILE: common.kt

<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{METADATA}!>expect fun foo()<!>
<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{METADATA}!>expect fun foo()<!>

expect fun foo(x: Int)
